# ESC

./: .gitmodules  CMakeLists.txt
board/: CH32F103.cfg
include/: global.h  global_variables.h  misc_user.h  motor_param_estimation.h  peripheral_config.h  stm32f10x_conf.h  stm32f10x_it.h
src/: global.c  global_variables.c  main.c  misc_user.c  motor_param_estimation.c  peripheral_config.c  stm32f10x_it.c  transfer.c
